src/css/styles/style.css
/* ... */
#contact_form.form-default textarea {
  padding: 10px;
  height: 170px;
  border-radius: 10px;
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
}

#form_subscribe input[type="text"] {
  padding: 7px 12px 7px 12px;
  width: 80%;
  float: left;
  display: table-cell;
  border-radius: 5px 0 0 5px;
  -moz-border-radius: 5px 0 0 5px;
  -webkit-border-radius: 5px 0 0 5px;
  border: none;
  border-right: none;
  background: rgba(255, 255, 255, 0.7);
  -webkit-box-shadow: 2px 2px 20px 0px rgba(20, 20, 20, 0.05);
  -moz-box-shadow: 2px 2px 20px 0px rgba(20, 20, 20, 0.05);
  box-shadow: 2px 2px 20px 0px rgba(20, 20, 20, 0.05);
}

.d-create-file {
  padding: 50px;
  border-radius: 10px;
  border: dashed 3px #dddddd;
  text-align: center;
}

.dark-scheme .d-create-file {
  border-color: rgba(255, 255, 255, 0.2);
}

.dark-scheme .d-create-file p {
  color: #ffffff;
}

#form_sb input[type="text"] {
  padding: 21px 12px 21px 12px;
  width: 85%;
  height: 30px;
  float: left;
  display: table-cell;
  border-radius: 8px 0 0 8px;
  -moz-border-radius: 8px 0 0 8px;
  -webkit-border-radius: 8px 0 0 8px;
  border: none;
  background: rgba(255, 255, 255, 0.7);
}

#form_sb input[type="text"]:focus {
  background: #ffffff;
}

#form_sb #btn-submit i {
  text-align: center;
  font-size: 30px;
  float: left;
  width: 15%;
  background: #171a21;
  color: #ffffff;
  display: table-cell;
  padding: 5px 0 6px 0;
  border-radius: 0 8px 8px 0;
  -moz-border-radius: 0 8px 8px 0;
  -webkit-border-radius: 0 8px 8px 0;
}

footer:not(.footer-light) #form_subscribe input[type="text"]::-moz-input-placeholder {
  color: #ffffff;
}

footer:not(.footer-light) #form_subscribe input[type="text"]::-webkit-input-placeholder {
  color: #ffffff;
}

footer:not(.footer-light) #form_subscribe.form-dark input[type="text"] {
  color: #ffffff;
  background: rgba(255, 255, 255, 0.1);
}

.footer-light #form_subscribe input[type="text"] {
  border: solid 1px #333333;
  border-right: none;
  padding: 6px 12px;
}

#form_subscribe input[type="text"]:focus {
  background: rgba(255, 255, 255, 0.2);
}

#form_subscribe #btn-subscribe i {
  text-align: center;
  font-size: 28px;
  float: left;
  width: 20%;
  background: #171a21;
  color: #ffffff;
  display: table-cell;
  padding: 5px 0 5px 0;
  border-radius: 0 5px 5px 0;
  -moz-border-radius: 0 5px 5px 0;
  -webkit-border-radius: 0 5px 5px 0;
}

#form_quick_search {
  font-family: var(--body-font);
  display: inline-block;
  margin-right: 0px;
  margin-bottom: -16px;
}

#form_quick_search input[type="text"] {
  padding: 8px 12px;
  width: 200px;
  float: left;
  display: table-cell;
  border-radius: 5px 0 0 5px;
  -moz-border-radius: 5px 0 0 5px;
  -webkit-border-radius: 5px 0 0 5px;
  border: solid 1px #ddd;
  border-right: none;
  background: rgba(255, 255, 255, 0.7);
  -webkit-box-shadow: 2px 2px 20px 0px rgba(20, 20, 20, 0.05);
  -moz-box-shadow: 2px 2px 20px 0px rgba(20, 20, 20, 0.05);
  box-shadow: 2px 2px 20px 0px rgba(20, 20, 20, 0.05);
  font-size: 16px;
}

.dark-scheme #form_quick_search input[type="text"] {
  color: #ffffff;
  background: none;
  border-color: rgba(255, 255, 255, 0.2);
}

#form_quick_search #btn-submit i {
  text-align: center;
  font-size: 16px;
  float: left;
  width: 60px;
  background: #171a21;
  color: #ffffff;
  display: table-cell;
  padding: 13px 0;
  border-radius: 0 5px 5px 0;
  -moz-border-radius: 0 5px 5px 0;
  -webkit-border-radius: 0 5px 5px 0;
}

.text-light #form_quick_search input[type="text"] {
  color: #ffffff;
  background: none;
  border: solid 1px rgba(255, 255, 255, 0.1);
}

.text-light #form_quick_search input[type="text"] {
  color: #ffffff;
}

.text-light #form_quick_search input[type="text"]::-moz-input-placeholder {
  color: #ffffff;
}

.text-light #form_quick_search input[type="text"]::-webkit-input-placeholder {
  color: #ffffff;
}

.header-light #quick_search {
  background: rgba(var(--secondary-color-rgb), 0.1);
}

.form-default input[type="text"]:focus,
.form-default textarea:focus,
.form-default input[type="email"]:focus,
.form-default select:focus {
  background: #f6f6f6;
}

.error_input {
  border-bottom: solid 1px #ff0000 !important;
}

/* ================================================== */

/* coming soon page */

/* ================================================== */

.coming-soon .logo {
  margin: 0;
  padding: 0;
}

.coming-soon h2 {
  margin-top: 0;
  color: rgba(255, 255, 255, 0.8);
  font-weight: 400;
}

.coming-soon .social-icons i {
  font-size: 20px;
  margin-left: 10px;
  margin-right: 10px;
}

.coming-soon .social-icons i:hover {
  background: none;
  color: rgba(255, 255, 255, 0.2);
}

.arrow-up,
.arrow-down {
  width: 0;
  height: 0;
  border-left: 40px solid transparent;
  border-right: 40px solid transparent;
  border-bottom: 40px solid #fff;
  position: fixed;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  bottom: 0;
  cursor: poInter;
  z-index: 101;
}

.arrow-down {
  border-top: 40px solid #fff;
  border-bottom: none;
  position: fixed;
  z-index: 102;
  top: -40px;
}

.arrow-up:before {
  font-family: "FontAwesome";
  font-size: 20px;
  content: "\f067";
  color: #222;
  position: relative;
  top: 12px;
  margin: 0 0 0 -8px;
}

.arrow-down:before {
  font-family: "FontAwesome";
  font-size: 20px;
  content: "\f068";
  color: #222;
  position: relative;
  top: -35px;
  margin: 0 0 0 -8px;
}

/* ================================================== */

/* elements */

/* ================================================== */

/* address */

/* ------------------------------ */
address {
  margin-top: 20px;
}

address span {
  display: block;
  margin-bottom: 10px;
  font-size: 18px;
  padding: 14.5px;
  background: #f5f5f5;
  border-radius: 300px;
}

address span i {
  margin-top: 5px;
  margin-left: 5px;
  margin-right: 15px;
}

.rtl address span i {
  margin-left: 15px;
  margin-right: 5px;
}

.text-light address span a {
  color: #ffffff;
}
/* ... */

